# hazardwatch

./: .gitignore  CHANGELOG.md  NOTICE  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml  refresh.yml
bench/: run_all.py
data/: hazards.json
data/samples/: nasa_eonet.json  nws_alerts.json  usgs_quakes.json
docs/: LIMITATIONS.md
examples/: run_demo.py
hazardwatch/: __init__.py  cli.py  client.py  event.py  geo.py  report.py  sources.py  store.py
tests/: test_hazardwatch.py
